# made_in_cpp

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  sandbox.cpp
src/: CMakeLists.txt
src/symbolus/: all.hpp  value.hpp
src/symbolus/arithmetic/: addition.hpp  all.hpp  division.hpp  multiplication.hpp  scaling.hpp
src/symbolus/calculus/: all.hpp  partial_derivative.hpp
src/symbolus/calculus/partial_derivative/: function_call_operator.hpp  value.hpp
src/symbolus/constant/: all.hpp  one.hpp  zero.hpp
src/symbolus/detail/: reference.hpp
src/symbolus/generic/: all.hpp  application_operator.hpp  args.hpp  constant.hpp  expand.hpp  function.hpp  projection.hpp  swap.hpp  tuple.hpp  tuple_application.hpp
src/symbolus/meta/: all.hpp
src/symbolus/meta/types/: all.hpp  at.hpp  concatenation.hpp  contains.hpp  empty.hpp  (+9 more)
src/symbolus/notation/: all.hpp  float.hpp  p01234.hpp  partial.hpp
src/symbolus/std/: all.hpp
src/symbolus/trigonometry/: all.hpp  cos.hpp  sin.hpp
src/symbolus2/: all.hpp
src/symbolus2/arithmetic/: addition.hpp  all.hpp  ostream.hpp
src/symbolus2/concept/: tuple_like.hpp
src/symbolus2/generic/: all.hpp  application.hpp  constant.hpp  function.hpp  ostream.hpp  projection.hpp  tuple.hpp
src/symbolus2/meta/: reference.hpp
src/symbolus2/notation/: all.hpp  c.hpp  p.hpp
test/: CMakeLists.txt
test/symbolus/arithmetic/: addition.test.cpp
test/symbolus/calculus/: partial_derivative.test.cpp
test/symbolus/generic/: composition.test.cpp  constant.test.cpp  function.test.cpp  projection.test.cpp  swap.test.cpp  tuple.test.cpp
(+8 files in other folders)
